--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1014</width>
-    <height>908</height>
+    <width>811</width>
+    <height>491</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,16 +18,6 @@
     <item row="0" column="0">
      <widget class="QCustomPlot" name="mainWidget" native="true"/>
     </item>
-    <item row="0" column="1">
-     <widget class="QTreeView" name="treeFS">
-      <property name="maximumSize">
-       <size>
-        <width>300</width>
-        <height>16777215</height>
-       </size>
-      </property>
-     </widget>
-    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -35,20 +25,50 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1014</width>
-     <height>20</height>
+     <width>811</width>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu">
     <property name="title">
      <string>Открыть</string>
     </property>
-    <addaction name="action"/>
+    <addaction name="actOpenDir"/>
+    <addaction name="actOpenFile"/>
    </widget>
    <addaction name="menu"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <action name="action">
+  <widget class="QDockWidget" name="dockProperty">
+   <attribute name="dockWidgetArea">
+    <number>2</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents">
+    <layout class="QVBoxLayout" name="verticalLayout">
+     <item>
+      <widget class="QListWidget" name="listProperty"/>
+     </item>
+    </layout>
+   </widget>
+  </widget>
+  <widget class="QDockWidget" name="dockLog">
+   <attribute name="dockWidgetArea">
+    <number>8</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents_2">
+    <layout class="QGridLayout" name="gridLayout_2">
+     <item row="0" column="0">
+      <widget class="QListWidget" name="listLog"/>
+     </item>
+    </layout>
+   </widget>
+  </widget>
+  <action name="actOpenDir">
+   <property name="text">
+    <string>Открыть папку</string>
+   </property>
+  </action>
+  <action name="actOpenFile">
    <property name="text">
     <string>Открыть файл</string>
    </property>
