--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -18,16 +18,6 @@
     <item row="0" column="0">
      <widget class="QCustomPlot" name="mainWidget" native="true"/>
     </item>
-    <item row="0" column="1">
-     <widget class="QTreeView" name="treeFS">
-      <property name="maximumSize">
-       <size>
-        <width>300</width>
-        <height>16777215</height>
-       </size>
-      </property>
-     </widget>
-    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -44,13 +34,43 @@
      <string>Открыть</string>
     </property>
     <addaction name="action"/>
+    <addaction name="action_2"/>
    </widget>
    <addaction name="menu"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QDockWidget" name="dockPropertyMain">
+   <attribute name="dockWidgetArea">
+    <number>2</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents_2">
+    <layout class="QVBoxLayout" name="verticalLayout">
+     <item>
+      <widget class="QListWidget" name="listWidget"/>
+     </item>
+    </layout>
+   </widget>
+  </widget>
+  <widget class="QDockWidget" name="dockWidget_2">
+   <attribute name="dockWidgetArea">
+    <number>8</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents_3">
+    <layout class="QGridLayout" name="gridLayout_2">
+     <item row="0" column="0">
+      <widget class="QListWidget" name="listWidget_2"/>
+     </item>
+    </layout>
+   </widget>
+  </widget>
   <action name="action">
    <property name="text">
     <string>Открыть файл</string>
+   </property>
+  </action>
+  <action name="action_2">
+   <property name="text">
+    <string>Окрыть папку</string>
    </property>
   </action>
  </widget>
